@@ -25,17 +25,17 @@ public class JobTest {
 
     @Test
     public void whenCompatorByNameAndProrityDesc() {
-        List<Job> jobs = Arrays.asList(
+        List<Job> jobs = new ArrayList<>(List.of(
                 new Job("X task", 0),
                 new Job("Fix bug", 1)
-        );
+        ));
         Comparator<Job> cmpNamePriority = new JobDescByName().thenComparing(new JobDescByPriority());
         Collections.sort(jobs, cmpNamePriority);
 
-        List<Job> expected = Arrays.asList(
+        List<Job> expected = new ArrayList<>(List.of(
                 new Job("X task", 0),
                 new Job("Fix bug", 1)
-        );
+        ));
         Collections.sort(expected, new JobDescByName());
 
         assertThat(jobs, is(expected));
@@ -43,17 +43,17 @@ public class JobTest {
 
     @Test
     public void whenCompatorByNameAndProrityInc() {
-        List<Job> jobs = Arrays.asList(
+        List<Job> jobs = new ArrayList<>(List.of(
                 new Job("X task", 0),
                 new Job("Fix bug", 1)
-        );
+        ));
         Comparator<Job> cmpNamePriority = new JobIncByName().thenComparing(new JobIncByPriority());
         Collections.sort(jobs, cmpNamePriority);
 
-        List<Job> expected = Arrays.asList(
+        List<Job> expected = new ArrayList<>(List.of(
                 new Job("X task", 0),
                 new Job("Fix bug", 1)
-        );
+        ));
         Collections.sort(expected, new JobIncByName());
 
         assertThat(jobs, is(expected));
@@ -61,17 +61,17 @@ public class JobTest {
 
     @Test
     public void whenCompatorByPriorityAndNameInc() {
-        List<Job> jobs = Arrays.asList(
+        List<Job> jobs = new ArrayList<>(List.of(
                 new Job("X task", 0),
                 new Job("Fix bug", 1)
-        );
+        ));
         Comparator<Job> cmpNamePriority = new JobIncByPriority().thenComparing(new JobIncByName());
         Collections.sort(jobs, cmpNamePriority);
 
-        List<Job> expected = Arrays.asList(
+        List<Job> expected = new ArrayList<>(List.of(
                 new Job("X task", 0),
                 new Job("Fix bug", 1)
-        );
+        ));
         Collections.sort(expected, new JobIncByPriority());
 
         assertThat(jobs, is(expected));
@@ -79,10 +79,10 @@ public class JobTest {
 
     @Test
     public void whenCompatorByNameInc() {
-        List<Job> jobs = Arrays.asList(
+        List<Job> jobs = new ArrayList<>(List.of(
                 new Job("Fix bug", 1),
                 new Job("X task", 0)
-        );
+        ));
         List<Job> sorted = Arrays.asList(
                 new Job("Fix bug", 1),
                 new Job("X task", 0)
@@ -97,10 +97,10 @@ public class JobTest {
 
     @Test
     public void whenCompatorByPriorityInc() {
-        List<Job> jobs = Arrays.asList(
+        List<Job> jobs = new ArrayList<>(List.of(
                 new Job("Fix bug", 1),
                 new Job("X task", 0)
-        );
+        ));
 
         Collections.sort(jobs, new JobIncByPriority());
 
